sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: ';' expected but 'while' found.
		} while(x)
                  ^AlgCocktailSort1:17: error: 'while' expected but '}' found.
} 
^